<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/employerViewSubmittedJobsCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <ListView
        android:id="@+id/EmployerJobsSubmittedListView"
        android:layout_width="408dp"
        android:layout_height="477dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/employerViewSubmittedJobsCloseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />


</android.support.constraint.ConstraintLayout>