<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/switchToEmployerRegisterPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchToEmployerLoginPageButton"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/switchToEmployerLoginPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="@+id/switchToEmployerRegisterPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="418dp" />
</androidx.constraintlayout.widget.ConstraintLayout>